Fixed some images
Updated en_us.lang file

--- a/src/main/resources/assets/mwc/lang/en_us.lang
+++ b/src/main/resources/assets/mwc/lang/en_us.lang
@@ -37,7 +37,6 @@ menu.example3.description=Enables example feature.
 itemGroup.resourceTab=MWC Resources
 
 # Blocks
-
 tile.copper_ore.name=Copper Ore
 tile.sulfur_ore.name=Sulfur Ore
 tile.tin_ore.name=Tin Ore
@@ -47,3 +46,5 @@ item.copper_chunk.name=Copper Chunks
 item.gunmetal_ingot.name=Gunmetal Ingot
 item.gunplate.name=Gunmetal Plate
 item.small_gunplate.name=Small Gunmetal Plate
+item.tin.name=Tin
+item.sulfur.name=Sulfur
