Fix some fault in en-US.lang

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -279,7 +279,7 @@ item.fmg9.name=FMG-9
 item.svd_dragunov.name=SVD Dragunov
 item.type20.name=Type-20
 item.fiveseven.name=FN Five-Seven
-item.zbroyarz10.name=Zbroyar-Z10
+item.zbroyar_z10.name=Zbroyar-Z10
 item.malyuk.name=Malyuk
 item.turret.name=Automated Turret
 item.turretupgraded.name=Automated Turret vers.2
@@ -487,7 +487,8 @@ item.mwc_HoneyBadgerSilencer.name=AAC Honey Badger Silencer
 item.mwc_KBP9A91Suppressor.name=KBP 9A-91 Carbine Silencer
 item.mwc_SamuraiEdgeSuppressor.name=Samurai Edge Silencer
 
-
+item.mwc_G11HandguardK1.name=G11 K1 Handguard
+item.mwc_G11HandguardK2.name=G11 K2 Handguard
 item.mwc_NGSWRail.name=NGSW-R Rail
 item.mwc_Z10Handguard.name=Zbroyar Z10 Handguard
 item.mwc_Type20Handguard.name=Type-20 Handguard
@@ -571,7 +572,7 @@ item.mwc_Mk48HandGuard.name=Mk48 Handguard
 item.mwc_M249UpperHandGuard.name=M249 Upper Handguard
 item.mwc_Mk48UpperHandGuard.name=Mk48 Upper Handguard
 item.mwc_G3A1Handguard.name=G3 Handguard
-item.mwc_G3A1HandguardRailed.name=G3 Railed Handguard
+item.mwc_G3HandguardRailed.name=G3 Railed Handguard
 item.mwc_DSR1Handguard.name=DSR-1 Handguard
 item.mwc_DSR1HandguardRailed.name=DSR-1 Railed Handguard
 item.mwc_MP5BMHandGuard.name=MP5BM Handguard
@@ -748,6 +749,7 @@ item.mwc_HeraArmsGrip.name=Hera Arms Grip
 item.mwc_M4Grip.name=M4 Grip
 item.mwc_M4GripTan.name=M4 Grip (Tan)
 item.mwc_M4GripGray.name=M4 Grip (Gray)
+item.mwc_SOCOM_Grip.name=SOCOM Grip
 item.mwc_AK47Grip.name=AK-47 Grip
 item.mwc_AK101Grip.name=AK-101 Grip
 item.mwc_AKErgoGrip.name=AK Ergo Grip
