--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1039,7 +1039,7 @@ tile.mwc_spookyghost2.name=Spooky Ghost 2
 tile.mwc_spookyghost3.name=Spooky Ghost 3
 tile.mwc_swat_truck.name=SWAT Truck
 
-itemGroup.guns_tab=Modern Warfare Resources
+itemGroup.guns_tab=MWC Resources
 itemGroup.AssaultRifles_tab=MWC Guns
 itemGroup.props_tab=MWC Props (Creative Use Only)
 itemGroup.AmmoTab=MWC Ammunition
