--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -453,8 +453,8 @@ item.baseball_bat_nails.name=Baseball Bat w/ Nails
 item.night_stick.name=Night Stick
 
 item.gas_can.name=Gas Can (PROP)
-item.mwc_wcam.name=mwc Camera
-item.mwc_tablet.name=mwc Tablet
+item.mwc_wcam.name=MWC Camera
+item.mwc_tablet.name=MWC Tablet
 
 
 item.mwc_M67Frag.name=M67 Frag Grenade
@@ -1041,7 +1041,6 @@ tile.mwc_swat_truck.name=SWAT Truck
 
 itemGroup.guns_tab=MWC Resources
 itemGroup.AssaultRifles_tab=MWC Guns
-itemGroup.props_tab=MWC Props (Creative Use Only)
 itemGroup.AmmoTab=MWC Ammunition
 itemGroup.AttachmentsTab=MWC Attachments
 itemGroup.ArmorTab=MWC Armor
