--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1071,7 +1071,14 @@ gui.currentZoom=Zoom: %s%%
 gui.grenadeExplodes=Explodes in %s sec
 gui.coolingDown=Cooling down...
 
+config.category.ores.name=Ores Config
+
+config.category.gameplay.name=Gameplay Config
+
+config.category.entities.name=Entities Config
+
 config.category.rendering.name=Rendering
+config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Screen Shaders
 config.rendering.enableAllShaders.property.name=Enable All Shaders
 config.rendering.enableScreenShaders.property.name=Disable Screen Shaders
