--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -657,8 +657,8 @@ item.mwc_ScarMLOKHandguard.name=MLOK SCAR 护木
 item.mwc_VectorMk1ModularHandguard.name=Vector Mk1 模块化护木
 item.mwc_VectorCarbineHandguard.name=Vector 卡宾枪护木
 item.mwc_Mk48HandGuard.name=Mk48 护木
-item.mwc_M249UpperHandGuard.name=M249 上护木
-item.mwc_Mk48UpperHandGuard.name=Mk48 上护木
+item.mwc_M249UpperHandGuard.name=M249 上侧护木
+item.mwc_Mk48UpperHandGuard.name=Mk48 上侧护木
 item.mwc_G3A1Handguard.name=G3 护木
 item.mwc_DSR1Handguard.name=DSR-1 护木
 item.mwc_DSR1HandguardRailed.name=DSR-1 导轨护木
@@ -961,8 +961,8 @@ item.mwc_M14Body.name=M14 DMR 枪身
 item.mwc_Mk14TanBody.name=Mk14 EBR 枪身(黄褐色)
 item.mwc_Mk14SnowBody.name=Mk14 EBR 枪身(北极)
 item.mwc_Mk14BlackBody.name=Mk14 EBR 枪身
-item.mwc_M14Cover.name=M14 DMR 上护木
-item.mwc_M14TriRailCover.name=M14 DMR 三轨上护木
+item.mwc_M14Cover.name=M14 DMR 上侧护木
+item.mwc_M14TriRailCover.name=M14 DMR 三轨上侧护木
 item.mwc_M14Rail.name=M14 DMR / Mk14 EBR 瞄准镜座
 item.mwc_MAS21Mount.name=MAS-21 瞄准镜座
 item.mwc_M16A1ScopeMount.name=M16A1 瞄准镜座
