--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1072,6 +1072,16 @@ gui.grenadeExplodes=Explodes in %s sec
 gui.coolingDown=Cooling down...
 
 config.category.ores.name=Ores Config
+config.ores.sulfurSpawnsPerChunk.property.name=Sulfur Ore Per Chunk
+config.ores.sulfurSpawnsPerChunk.property.tooltip=The amount of Sulfur Ore spawned per chunk.
+config.ores.copperSpawnsPerChunk.property.name=Copper Ore Per Chunk
+config.ores.copperSpawnsPerChunk.property.tooltip=The amount of Copper Ore spawned per chunk.
+config.ores.tinSpawnsPerChunk.property.name=Tin Ore Per Chunk
+config.ores.tinSpawnsPerChunk.property.tooltip=The amount of Tin Ore spawned per chunk.
+config.ores.leadSpawnsPerChunk.property.name=Lead Ore Per Chunk
+config.ores.leadSpawnsPerChunk.property.tooltip=The amount of Lead Ore spawned per chunk.
+config.ores.graphiteSpawnsPerChunk.property.name=Graphite Ore Per Chunk
+config.ores.graphiteSpawnsPerChunk.property.tooltip=The amount of Graphite Ore spawned per chunk.
 
 config.category.gameplay.name=Gameplay Config
 
@@ -1080,18 +1090,32 @@ config.category.entities.name=Entities Config
 config.category.rendering.name=Rendering
 config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Screen Shaders
+config.category.screenshaders.tooltip=Screen Shaders
 config.rendering.enableAllShaders.property.name=Enable All Shaders
+config.rendering.enableAllShaders.property.tooltip=Enable All Shaders
 config.rendering.enableScreenShaders.property.name=Disable Screen Shaders
+config.rendering.enableScreenShaders.property.tooltip=Disable Screen Shaders
 config.rendering.enableWorldShaders.property.name=Disable World Shaders
+config.rendering.enableWorldShaders.property.tooltip=Disable World Shaders
 config.rendering.enableGunShaders.property.name=Enable Gun Shaders
+config.rendering.enableGunShaders.property.tooltip=Enable Gun Shaders
 config.rendering.enableFlashShaders.property.name=Enable Flash Shaders
+config.rendering.enableFlashShaders.property.tooltip=Enable Flash Shaders
 config.rendering.enableReticleShaders.property.name=Enable Reticle Shaders
+config.rendering.enableReticleShaders.property.tooltip=Enable Reticle Shaders
 config.rendering.enableHDRFramebuffer.property.name=Enable HDR Framebuffer
+config.rendering.enableHDRFramebuffer.property.tooltip=Enable HDR Framebuffer
 config.rendering.enableScopeEffects.property.name=Enable Scope Effects
+config.rendering.enableScopeEffects.property.tooltip=Enable Scope Effects
 config.rendering.screenshaders.bloomEffect.property.name=Enable Bloom
+config.rendering.screenshaders.bloomEffect.property.tooltip=Enable Bloom
 config.rendering.screenshaders.filmGrain.property.name=Enable Film Grain
+config.rendering.screenshaders.filmGrain.property.tooltip=Enable Film Grain
 config.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensity
+config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensity
 config.rendering.screenshaders.bloomLayers.property.name=Amount of Bloom Layers
-config.rendering.screenshaders.onScreenRainAndSnow.property.name=On-Screen Rain and Snow
+config.rendering.screenshaders.bloomLayers.property.tooltip=Amount of Bloom Layers
+config.rendering.enableFancyRainAndSnow.property.name=On-Screen Rain and Snow
+config.rendering.enableFancyRainAndSnow.property.tooltip=Please keep this setting DISABLED as it is currently broken.
 
 overlay.opendoor.name=Open Door
