--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -1289,7 +1289,7 @@ config.rendering.enableReticleShaders.property.name=瞄具着色器
 config.rendering.enableReticleShaders.property.tooltip=开启时不影响光影的渲染, 让 红点/全息瞄准镜的准星 不再是贴图并带有光效, 令瞄准镜带有镜片, 且准星保持在屏幕中间
 config.rendering.enableHDRFramebuffer.property.name=HDR帧缓冲区
 config.rendering.enableScopeEffects.property.name=瞄准镜效果
-config.rendering.enableFancyRainAndSnow.property.name=绚丽雨雪
+config.rendering.enableFancyRainAndSnow.property.name=绚丽雨雪(务必禁用)
 config.rendering.screenshaders.bloomEffect.property.name=泛光
 config.rendering.screenshaders.filmGrain.property.name=胶片颗粒
 config.rendering.screenshaders.filmGrainIntensity.property.name=胶片颗粒强度
