Can configure explosion break, explosion damage, and glass penetration
Correction translation

--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -472,16 +472,16 @@ item.mwc_M1911_44Mag.name=.44 7发Colt M1911弹匣
 item.mwc_SamuraiEdgeMag.name=.40 15发S&W“武士之刃”弹匣
 item.mwc_socom_mag.name=5.56x45mm 30发SOCOM STANAG弹匣
 item.mwc_M17Mag.name=9x19mm 17发西格绍尔弹匣
-item.mwc_UMP45Mag.name=.45 ACP 8发HK弹匣
+item.mwc_UMP45Mag.name=.45 ACP 25发HK弹匣
 item.mwc_C8Mag.name=5.56x45mm 30发STANAG SFW弹匣
-item.mwc_R700Mag.name=7.62x54mm 6发Remington-700弹匣
+item.mwc_R700Mag.name=7.62x54mm 5发Remington-700弹匣
 item.mwc_R700Mag10rnd.name=7.62x54mm 10发M700弹匣
 item.mwc_AK74Mag.name=5.45x39mm 30发AK-74弹匣
-item.mwc_MakarovMag.name=9x18 8发Makarov PM弹匣
+item.mwc_MakarovMag.name=9x18mm 8发Makarov PM弹匣
 item.mwc_SA80Mag.name=5.56x45mm 60发STANAG弹匣
 item.mwc_FNFALMag.name=7.62x51mm 20发弹匣
 item.mwc_MAC10Mag.name=.45 ACP 30发弹匣
-item.mwc_USP45Mag.name=.45 ACP 25发HK弹匣
+item.mwc_USP45Mag.name=.45 ACP 8发HK弹匣
 item.mwc_UMP9Mag.name=9x19mm 30发HK UMP弹匣
 item.mwc_InterventionMag.name=.408 7发CheyTac弹匣
 item.mwc_ScorpionMag.name=9x19mm 30发EVO弹匣
@@ -1302,9 +1302,11 @@ config.gameplay.enableOpenDoorDisplay.property.name=开门提示
 config.gameplay.holdToAim.property.name=按住瞄准
 config.gameplay.enableAmmoCounterBackground.property.name=子弹计数器背景
 config.gameplay.enableBleedingOnHit.property.name=血液粒子大小
+config.gameplay.penetratesGlass.property.name=玻璃穿透
 config.gameplay.bulletBreakGlass.property.name=玻璃破坏
 config.gameplay.enableMuzzleEffects.property.name=枪口火焰
 config.gameplay.enableBlurOnAim.property.name=瞄准模糊
+config.gameplay.explosionBreak.property.name=爆炸破坏
 config.gameplay.explosionDamage.property.name=爆炸伤害倍率
 config.gameplay.explodedBlockDropChance.property.name=爆炸时方块掉落概率
 config.gameplay.statusBarPosition.property.name=状态栏位置
