Equipment Overhaul Part 1

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1035,7 +1035,7 @@ itemGroup.AssaultRifles_tab=MWC Guns
 itemGroup.props_tab=MWC Props (Creative Use Only)
 itemGroup.AmmoTab=MWC Ammunition
 itemGroup.AttachmentsTab=MWC Attachments
-itemGroup.ArmorTab=MWC Armor
+itemGroup.ArmorTab=MWC Equipment
 itemGroup.GrenadesTab=MWC Grenades
 itemGroup.SpartanTab=MWC Spartan Armors Tab
 itemGroup.GadgetsTab=MWC Gadgets
