--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -287,7 +287,7 @@ item.p226.name=SIG P226 手枪
 item.M1897.name=M1897 霰弹枪
 item.taurus_raging_hunter.name=陶鲁斯怒火猎人 左轮手枪
 item.super90.name=Super-90 霰弹枪
-item.sw_500_magnum.name=史密斯·韦森 左轮手枪
+item.sw_500_magnum.name=史密斯·韦森M500 左轮手枪
 item.desert_eagle.name=沙漠之鹰 手枪
 item.chainsaw.name=链锯
 item.m202.name=M202 火箭发射器
@@ -305,7 +305,7 @@ item.m1911.name=M1911 手枪
 item.browning_hi_power.name=勃朗宁 手枪
 item.bren_mkii.name=布伦MkII 机枪
 item.m1_garand.name=M1加兰德 步枪
-item.browning_auto_5.name=白朗宁Auto-5 霰弹枪
+item.browning_auto_5.name=勃朗宁Auto-5 霰弹枪
 item.p90.name=FN P90 冲锋枪
 item.mp7.name=HK MP7 冲锋枪
 item.sccy_cpx_2.name=CPX-2 手枪
@@ -320,7 +320,7 @@ item.mares_leg.name=Mare's Leg 步枪
 item.ntw_20.name=NTW-20 狙击步枪
 item.hs12.name=HS-12 霰弹枪
 item.kriss_vector.name=Kriss Vector 冲锋枪
-item.g43_gewehr.name=43式 步枪
+item.g43_gewehr.name=Gewehr43 步枪
 item.dp28.name=DP-28 机枪
 item.socom_m4a1.name=M4A1 突击步枪
 item.m17.name=M17 手枪
@@ -354,11 +354,11 @@ item.mac10.name=MAC-10 冲锋枪
 item.ump45.name=HK UMP-45 冲锋枪
 item.m200_intervention.name=M200 狙击步枪
 item.sig_mpx.name=SIG MPX 冲锋枪
-item.scorpion_evo3_a1.name=EVO3 A1 冲锋枪
+item.scorpion_evo3_a1.name=Scorpion EVO3A1 冲锋枪
 item.apc9.name=APC9 冲锋枪
 item.arx160.name=ARX-160 突击步枪
 item.g2_contender.name=G2竞争者 手枪
-item.beowulf_50_cal.name=.50口径贝奥武夫 步枪
+item.beowulf_50_cal.name=贝奥武夫 射手步枪
 item.hk_417.name=HK417 射手步枪
 item.ar15.name=AR-15 突击步枪
 item.sig_mcx.name=SIG MCX 突击步枪
@@ -645,7 +645,7 @@ item.mwc_ACRSquareDropHandguard.name=ACR 方形下护木 (黑色)
 item.mwc_ACRSquareDropHandguardTan.name=ACR 方形下护木
 item.mwc_HoneyBadgerHandguard.name=AAC蜜獾 护木
 item.mwc_HoneyBadgerMatrixArmsHandguard.name=AAC蜜獾 矩阵护木
-item.mwc_M1CarbineHandguard.name=M1 护木
+item.mwc_M1CarbineHandguard.name=M1 卡宾 护木
 item.mwc_M1CarbineVentilatedHandguard.name=M1卡宾枪 通风式护木
 item.mwc_M1ScoutCarbineHandguard.name=M1 护木
 item.mwc_M16A4HandGuard.name=M16A4 四轨护木
@@ -728,8 +728,8 @@ item.mwc_Specter.name=埃尔坎幽灵SFOV4-A1 瞄准镜
 item.mwc_Reflex.name=15 MOA红点瞄准镜
 item.mwc_Holographic.name=EOTech EXPS-3全息瞄准镜(褐色)
 item.mwc_HolographicAlt.name=EOTech 512 A65全息瞄准镜(黑色)
-item.mwc_Kobra.name=8-18 眼镜蛇红点瞄准具
-item.mwc_KobraMount.name=非拆卸式8-18眼镜蛇红点瞄准具
+item.mwc_Kobra.name=8-18 眼镜蛇红点瞄准镜
+item.mwc_KobraMount.name=非拆卸式8-18眼镜蛇红点瞄准镜
 item.mwc_Holographic2.name=EOTech EXPS3-0全息瞄准镜(褐色)
 item.mwc_okp7.name=OKP-7 瞄准镜
 item.mwc_MicroT1.name=Micro-T1 瞄准镜
@@ -827,7 +827,7 @@ item.mwc_G3Stock.name=G3 枪托
 item.mwc_MP7Stock.name=MP7 枪托
 item.mwc_MP7MilSpecStock.name=MP7 军用规格枪托
 item.mwc_AK12Stock.name=AK-12 枪托
-item.mwc_AK12ZenitcoStock.name=AK-12 泽尼特枪托
+item.mwc_AK12ZenitcoStock.name=AK-12 泽宁特枪托
 item.mwc_VSSVintorezStock.name=VSS微声狙击步枪枪托
 item.mwc_ASValStock.name=AS Val 枪托
 item.mwc_VSSVintorezMilspecStock.name=VSS微声狙击步枪军用规格枪托
