--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1130,3 +1130,6 @@ config.rendering.enableFancyRainAndSnow.property.name=On-Screen Rain and Snow
 config.rendering.enableFancyRainAndSnow.property.tooltip=Please keep this setting DISABLED as it is currently broken.
 
 overlay.opendoor.name=Open Door
+
+death.attack.gun=%s was shot by %s using %s
+death.attack.gun.noshooter=%s was shot to death using %s
