--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1005,7 +1005,7 @@ tile.mwc_DuelFloodLight.name=Duel Flood Light
 tile.mwc_FloodLight.name=Flood Light
 tile.mwc_Radio_rotated.name=Radio (Rotated)
 tile.mwc_Radio.name=Radio
-tile.mwc_camera_rotated.name=Camera Rotated
+tile.mwc_camera_rotated.name=Camera (Rotated)
 tile.mwc_pc.name=PC
 tile.mwc_propanetank.name=Propane Tank
 tile.mwc_towablefloodlight.name=Towable Flood Light
@@ -1048,7 +1048,7 @@ key.opendoor=Open Door
 key.proning=Prone
 key.unload=Unload
 
-keys.categories.vehicle
+keys.categories.vehicle=Modern Warfare Cubed (Vehicle)
 vehicle.breake=Brake
 vehicle.clutch=Clutch
 vehicle.handbrake=Handbreake
