Networking Improvement Part 12 & Status Message & Cleanup

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1061,7 +1061,7 @@ gui.attachmentMode.changeUnderBarrelRig=Press [%s] to add under-barrel rig
 gui.attachmentMode.applyLaser= Press [%s] to apply laser attachment
 gui.ammoCounter=Ammo: %s
 gui.noMagazine=No magazine
-gui.noAmmo=No ammo
+gui.noAmmo=No ammunition
 gui.firearmMode=Firearm mode: %s
 gui.firearmMode.semi=Semi
 gui.firearmMode.auto=Auto
