--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -364,7 +364,7 @@ item.mwc_MPXMag.name=30rnd 9x19mm MPX Magazine
 item.mwc_APC9Mag.name=30rnd 9x19mm APC9 Magazine
 item.mwc_M6CMag.name=12rnd 9x19mm Magazine
 item.mwc_VectorDrumMag.name=50rnd .45 ACP Vector Drum Magazine
-item.mwc_NGSWR_Mag.name=20rnd 6.5mm Magazine
+item.mwc_NGSWR_Mag.name=20rnd .277 FURY Magazine
 item.mwc_FamasF1Mag.name=30rnd 5.56x45mm NATO F1 Magazine
 item.mwc_BeowulfMag.name=13rnd .50 Beowulf Magazine
 item.mwc_S710TricunMag.name=30rnd 10mm Magazine
