--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -424,7 +424,7 @@ item.mwc_Bullet57x28mm.name=5.7x28mm Bullet
 item.mwc_Bullet408CT.name=.408 Cheyenne Tactical Bullet
 item.mwc_Bullet4570.name=.45-70 Government Bullet
 item.mwc_Bullet65.name=6.5mm Bullet
-item.mwc_Bullet_277.name=.277 FURY Bullet
+item.mwc_bullet_277.name=.277 FURY Bullet
 item.mwc_Bullet545x39.name=5.45x39mm Bullet
 item.mwc_Bullet40SW.name=.40 S&W Bullet
 item.mwc_Bullet50Beowulf.name=.50 Beowulf Bullet
