Flashbangs not WIP anymore & Cleanup

--- a/src/main/resources/assets/mwc/lang/pt_BR.lang
+++ b/src/main/resources/assets/mwc/lang/pt_BR.lang
@@ -451,7 +451,7 @@ item.mwc_tablet.name=MWC Tablet
 item.mwc_M67Frag.name=Granada M67 de Frag
 item.mwc_ImpactGrenade.name=Granada de Impacto
 item.mwc_M18White.name=Granada de Fumaça M18 (Branca)
-item.mwc_Flash.name=Granada de flash (WIP)
+item.mwc_Flash.name=Granada de flash
 
 item.mwc_ShotgunShell.name=Cartucho de Calibre 12
 
