--- a/src/main/resources/assets/mwc/lang/tr_TR.lang
+++ b/src/main/resources/assets/mwc/lang/tr_TR.lang
@@ -443,7 +443,7 @@ item.mwc_tablet.name=Tablet
 item.mwc_M67Frag.name=M67 Frag Grenade
 item.mwc_ImpactGrenade.name=Impact Grenade
 item.mwc_M18White.name=M18 Smoke Grenade (White)
-item.mwc_Flash.name=Flash Grenade (WIP)
+item.mwc_Flash.name=Flash Grenade
 
 item.mwc_ShotgunShell.name=12 Gauge Pompalı Mermisi
 
