Missing Config Lang  (#240)
* Missing Config Lang Info

* Update en_US.lang

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -1087,20 +1087,27 @@ config.ores.graphiteSpawnsPerChunk.property.tooltip=The amount of Graphite Ore s
 config.category.gameplay.name=Gameplay Config
 config.gameplay.enableAmmoCounter.property.name=Ammo Counter
 config.gameplay.enableAmmoCounter.property.tooltip=Enable/Disable the Ammo Counter
+config.gameplay.ammoCounterX.property.name=Ammo Counter X
+config.gameplay.ammoCounterY.property.name=Ammo Counter Y
+config.gameplay.ammoCounterSize.property.name=Ammo Counter Size
 config.gameplay.enableOpenDoorDisplay.property.name=Open Door Display
+config.gameplay.enableAmmoCounterBackground.property.name=Ammo Counter Background
+config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Ammo Counter Reverse
 config.gameplay.enableOpenDoorDisplay.property.tooltip=Enable/Disable the Open Door Display
 config.gameplay.holdToAim.property.name=Hold To Aim
 config.gameplay.holdToAim.property.tooltip=Enable/Disable hold to aim
-config.gameplay.enableAmmoCounterBackground.property.name=Ammo Counter Background
 config.gameplay.enableAmmoCounterBackground.property.tooltip=Enable/Disable the background for Ammo Counter
 config.gameplay.enableBleedingOnHit.property.name=Bleeding On Hit
 config.gameplay.enableBleedingOnHit.property.tooltip=Enable/Disable bleeding on hit
 config.gameplay.bulletBreakGlass.property.name=Bullet Break Glass
 config.gameplay.bulletBreakGlass.property.tooltip=Enable/Disable bullets breaking glass
+config.gameplay.penetrableBlocks.property.name=Penetrable Blocks
+config.gameplay.knockbackOnHit.property.name+Knockback On Hit
 config.gameplay.enableMuzzleEffects.property.name=Muzzle Effects
 config.gameplay.enableMuzzleEffects.property.tooltip=Enable/Disable the muzzle effects
 config.gameplay.enableBlurOnAim.property.name=Blur On Aim
 config.gameplay.enableBlurOnAim.property.tooltip=Enable/Disable blur on aim
+config.gameplay.explosionBreak.property.name=Explosion Break
 config.gameplay.explosionDamage.property.name=Explosion Damage
 config.gameplay.explosionDamage.property.tooltip=Customize the explosion damage
 config.gameplay.explodedBlockDropChance.property.name=Exploded Block Drop Chance
