--- a/src/main/resources/assets/mwc/lang/zh_CN.lang
+++ b/src/main/resources/assets/mwc/lang/zh_CN.lang
@@ -1146,7 +1146,7 @@ itemGroup.equipment=护具
 itemGroup.throwables=投掷物
 itemGroup.blocksAndIngots=方块&锭
 
-key.categories.weaponlib=现代战争立方体
+key.categories.weaponlib=现代战争方块化
 
 key.texture_change=更换枪械涂装
 
@@ -1162,7 +1162,7 @@ key.scope=瞄准镜类型
 
 key.silencer=枪管类型
 
-key.categories.futuristicarsenal=现代战争立方体
+key.categories.futuristicarsenal=现代战争方块化
 
 key.laser=开关镭射
 
@@ -1182,7 +1182,7 @@ key.nightVision=开关夜视镜
 
 key.unload=卸下弹匣
 
-key.categories.vehicle=现代战争立方体 载具
+key.categories.vehicle=现代战争方块化 载具
 
 vehicle.brake=刹车
 
