Add Mag belt lang

--- a/src/main/resources/assets/mwc/lang/en_US.lang
+++ b/src/main/resources/assets/mwc/lang/en_US.lang
@@ -101,6 +101,8 @@ item.mwc_swat_vest.name=UTG-547 Tactical Vest
 
 item.mwc_m43a_chest_harness.name=M43A Chest Harness
 
+item.mwc_magazine_belt.name=Magazine Belt
+
 item.sv98.name=SV-98
 item.mp5a5.name=HK MP5
 item.m40a6.name=M40A6
